--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
                    <p class="body-text text-center max-w-[520px] max-auto  ">CATRANSCAM MANAGES STRATEGIC FREIGHT PROCUREMENT FOR SOME OF THE WORLD'S LEADING COMPANIES.</p>
              </div>
 
-             <div class="owl-carousel owl-theme ">
-                <div><img class="h-[50px] md:h-[60px] " src="images/safca.png" alt=""></div>
-                <div><img class="h-[50px] md:h-[60px] " src="images/african solar.png" alt=""></div>
-                <div><img class="h-[50px] md:h-[60px] " src="images/impexteam 1.png" alt=""></div>
-                <div><img class="h-[50px] md:h-[60px] " src="images/chococam.png" alt=""></div>
-                <div><img class="h-[50px] md:h-[60px] " src="images/super U.png" alt=""></div>
+             <div class="owl-carousel owl-theme flex items-center gap-5 ">
+                <div><img class=" md:h-[60px] " src="images/safca.png" alt=""></div>
+                <div><img class=" md:h-[60px] " src="images/african solar.png" alt=""></div>
+                <div><img class=" md:h-[60px] " src="images/impexteam 1.png" alt=""></div>
+                <div><img class=" md:h-[60px] " src="images/chococam.png" alt=""></div>
+                <div><img class=" md:h-[60px] " src="images/super U.png" alt=""></div>
                 
              </div>
         </section>
@@ -179,7 +179,7 @@
     responsive:{
         0:{
             items:2,
-            
+             autoWidth:true,
         },
         600:{
             items:3
