--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
                  </div>
 
                  <div class=" overflow-hidden lg:w-[530px] lg:h-[600px] ">
-                    <video loop muted autoplay playinsline class="md:max-w-full lg:max-w-[870px] md:h-[660px] overflow-hidden " >
-                        <source  src="images/pexels-tima-miroshnichenko-6170068.mp4" type="video/mp4">
+                    <video loop muted autoplay playinsline class="md:max-w-full lg:max-w-[790px] md:h-[660px] overflow-hidden " >
+                        <source  src="images/process.mp4" type="video/mp4">
                     </video>
                  </div>
                 
