--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
             </div>
         </section>
 
-        <section class="relisation bg-world-map  bg-cover bg-center bg-fixed w-full h-full mt-[75px] ">
+        <section class="relisation bg-world-map  bg-cover bg-center bg-fixed w-full h-full mt-[75px] overflow-hidden ">
             <div class=" flex flex-col md:flex-row justify-between text-center md:items-start w-full py-12 ">
-                <img class="hidden md:block" src="images/Trailer.png" alt="">
+                <img class="hidden md:block md:w-[200px] lg:w-auto " src="images/Trailer.png" alt="">
                 <div class="space-y-3 px-[25px] md:px-0 mx-auto ">
                     <h3 class="font-Poppins text-3xl md:text-4xl font-bold text-center text-LightBlue ">What have
                         <br><span class="text-Deepblue">we done up to date</span></h3>
@@ -140,7 +140,7 @@
                                  </div>
                             </div>
                 </div>
-                <img class="hidden md:block" src="images/van.png" alt="">
+                <img class="hidden md:block md:w-[200px] lg:w-auto " src="images/van.png" alt="">
 
           
             </div>
