--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="space-y-2">
                     <img src="icons/approved.svg" alt="">
-                    <h3 class="text-xl text-Deepblue font-bold">Approved customes commisioner</h3>
+                    <h3 class="text-xl text-Deepblue font-bold">Approved customs commisioner</h3>
                     <p class="font-Quantico text-black leading-6 text-base md:max-w-xs lg:max-w-[420px] ">Privileged domain of declaration as well as choice of customs. Our competent declarant staff are indispensably friendly experienced. We treat your files in optimal conditions of safety, rigor, speed and professionalism..</p>
                 </div>
 
