--- a/fr/catranscam-fr.html
+++ b/fr/catranscam-fr.html
@@ -25,7 +25,7 @@
                 <li class="font-Quantico  text-lg "><a class="hover:text-LightBlue lg:text-black  text-white text-5xl lg:text-lg text-left duration-500 links" href="#our-service">Our service</a></li>
                 <li class="font-Quantico  text-lg "><a class="hover:text-LightBlue lg:text-black  text-white text-5xl lg:text-lg text-left duration-500 links" href="#team">Team</a></li>
                 <li class="font-Quantico  text-2xl lg:text-lg bg-white lg:bg-LightBlue  rounded-lg p-1 hover:bg-blue-400 duration-500 "><a class="text-LightBlue lg:text-white" href="#contact">Contact Us</a></li>
-                <li  id="btn-lang" class="cursor-pointer flex flex-col items-center"><span class="iconify"  style="font-size: 32px;" data-icon="vs:language"></span>
+                <li  id="btn-lang" class=" flex flex-col items-center"><span class="iconify cursor-pointer"  style="font-size: 32px;" data-icon="vs:language"></span>
                     <div class="bg-LightBlue w-max mt-1 rounded-sm hidden" id="display-lang">
                         <a  class="p-2 font-Quantico text-white  " href="/index.html">Anglais</a>
     
@@ -78,7 +78,7 @@
     
                     <p class="body-text max-w-md">Avec plus de 20 ans d'expérience CATRANSCAM a été créé en 1991 avec la vision de faciliter le commerce international. Aujourd'hui, nous avons un groupe de travail entièrement formé avec des années d'expérience dans le domaine. Plus de 20 ans d'expérience c'est plus de 20 ans de services fidèles et de qualité</p>
                 </div>
-                <img class="md:h-[350px] h-auto  lg:rounded-full mt-[20px] lg:mt-0  "  src="images/truck.png" alt="">
+                <img class="md:h-[350px] h-auto  lg:rounded-full mt-[20px] lg:mt-0  "  src="/images/truck.png" alt="">
             </div>
         </section>
 
