--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </li>   
              
             </ul>
-            <div class=" lg:hidden space-y-0.5 z-20 " id="nav-btn">
+            <div class=" lg:hidden space-y-0.5 z-20 cursor-pointer " id="nav-btn">
                 <div class="w-[25px] h-1 bg-LightBlue nav-sub"></div>
                 <div class="w-[25px] h-1 bg-LightBlue nav-sub"></div>
                 <div class="w-[25px] h-1 bg-LightBlue nav-sub"></div>
