--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <li class="font-Quantico  text-lg "><a class="hover:text-LightBlue lg:text-black  text-white text-5xl lg:text-lg text-left duration-500 links" href="#team">Team</a></li>
                 <li class="font-Quantico      bg-white lg:bg-LightBlue  rounded-lg p-1 hover:bg-blue-400 duration-500 "><a class="text-LightBlue lg:text-white lg:text-lg text-2xl" href="#contact">Contact Us</a></li>
              <li  id="btn-lang" class="cursor-pointer flex flex-col items-center"><span class="iconify"  style="font-size: 32px;" data-icon="vs:language"></span>
-                <div class="bg-LightBlue w-max mt-1 rounded-sm hidden" id="display-lang">
-                    <a  class="p-2 font-Quantico text-white  " href="fr/catranscam-fr.html">Francais</a>
+                <div class="bg-white lg:bg-LightBlue w-max mt-1 rounded-sm hidden" id="display-lang">
+                    <a  class="p-2 font-Quantico text-LightBlue text-lg  lg:text-white  " href="fr/catranscam-fr.html">Francais</a>
 
                 </div>
                 
@@ -204,7 +204,11 @@
         </section>
 
         <section class="process mx-[25px] lg:mx-[50px] mt-[75px] ">
-            <h2 class="font-Poppins font-bold text-Deepblue  text-3xl md:text-4xl text-left md:mx-auto   max-w-full md:max-w-2xl md:text-center lg:max-w-[479px] mb-4   ">We provide the best process experience</h2>
+            <div class="flex flex-col md:flex-row items-center justify-start bg-LightBlue w-full " >
+
+            <img src="images/port.jpg" class="w-auto h-auto hidden md:block  "  alt="">
+            <h2 class="font-Poppins font-bold text-white   text-2xl md:text-2xl text-left    max-w-full md:max-w-2xl pl-5 lg:max-w-[479px] mb-4   ">We provide the best process experience</h2>
+        </div>
              <div class="flex flex-col lg:flex-row justify-between items-center  ">
                  <div class="space-y-[46px] md:space-y-[96px] mt-[20px] ">
 
