--- a/fr/catranscam-fr.html
+++ b/fr/catranscam-fr.html
@@ -200,7 +200,7 @@
              <div class="flex flex-col md:flex-row items-center justify-start bg-LightBlue w-full " >
 
             <img src="/images/port.jpg" class="w-auto h-auto hidden md:block  "  alt="">
-            <h2 class="font-Poppins font-bold text-white   text-2xl md:text-2xl text-left    max-w-full md:max-w-2xl pl-5 lg:max-w-[479px] mb-4   ">Nous fournissons la meilleure expérience de processus</h2>
+            <h2 class="font-Poppins font-bold text-white   text-2xl lg:text-4xl  text-left    max-w-full md:max-w-2xl pl-5 lg:max-w-[479px] mb-4   ">Nous fournissons la meilleure expérience de processus</h2>
              </div>
              <div class="flex flex-col lg:flex-row justify-between items-center  ">
                  <div class="space-y-[46px] md:space-y-[96px] mt-[20px] ">
