--- a/fr/catranscam-fr.html
+++ b/fr/catranscam-fr.html
@@ -139,7 +139,7 @@
         </section>
 
         <section class="relisation bg-world-map  bg-cover bg-center bg-fixed w-full h-full mt-[75px] overflow-hidden ">
-            <div class=" flex flex-col md:flex-row justify-between text-center md:items-start w-full py-12 ">
+            <div class=" flex flex-col md:flex-row justify-between mx-auto text-center md:items-start w-full py-12 ">
                 <img class="hidden md:block md:w-[200px] lg:w-auto " src="/images/Trailer.png" alt="">
                 <div class="space-y-3 px-[25px] md:px-0 mx-auto ">
                     <h3 class="font-Poppins text-3xl md:text-4xl font-bold text-center text-LightBlue ">Qu'avons-
@@ -149,12 +149,12 @@
                             door-steps</p>
                             <div class="flex flex-col md:flex-row space-y-10 md:space-y-0 spac-x-5 items-center gap-5 ">
                                 <div class="mx-auto text-center space-y-1  ">
-                                   <img class="mx-auto" src="icons/greatings.svg" alt="">
+                                   <img class="mx-auto" src="/icons/greatings.svg" alt="">
                                    <h4 class="font-Poppins font-bold text-3xl text-LightBlue">10k</h4>
-                                   <p class="text-base text-black font-Quantico">client servi/p> 
+                                   <p class="text-base text-black font-Quantico">client servi</p> 
                                 </div>
                                 <div class="mx-auto text-center space-y-1  ">
-                                    <img class="mx-auto" src="icons/globe.svg" alt="">
+                                    <img class="mx-auto" src="/icons/globe.svg" alt="">
                                     <h4 class="font-Poppins font-bold text-3xl text-LightBlue">10,000km/h</h4>
                                     <p class="text-base text-black font-Quantico">Distance de livraison</p> 
                                  </div>
