--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Quantico:wght@400;700&display=swap" rel="stylesheet">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
    <link rel="stylesheet" type="text/css" href="slick.css"/>
    <link rel="stylesheet" type="text/css" href="slick-theme.css"/>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -67,7 +70,7 @@
 </nav>
 
 
-    <main class="mt-[75px] ">
+    <main class="mt-[95px] ">
 
 
 
@@ -75,12 +78,12 @@
             <div class="flex  flex-col lg:flex-row justify-between items-center ">
                 <div class="space-y-2  ">
                     <h1
-                    class="text-LightBlue font-Poppins font-bold text-2xl md:text-4xl lg:text-5xl  ">
-                    CATRANSCAM <br><span class="text-Deepblue">YOUR IDEAL PARTNER</span></h1>
+                    class="text-LightBlue font-Poppins font-bold text-2xl md:text-4xl lg:text-5xl about-title  ">
+                    CATRANSCAM <br><span class="text-Deepblue about-title">YOUR IDEAL PARTNER</span></h1>
     
                     <p class="body-text max-w-md">With more than 20 years of experience CATRANSCAM was created in 1991 with the vision to facilitated international trade. Today we have a fully trained task force with years of experience in the field. Over 20 years of experience is over 20 years of loyal and quality service</p>
                 </div>
-                <img class="md:h-[350px] h-auto  lg:rounded-full mt-[20px] lg:mt-0  "  src="images/truck.png" alt="">
+                <img class="md:h-[350px] h-auto  lg:rounded-full mt-[20px] lg:mt-0 image-mask  "  src="images/truck.png" alt="">
             </div>
         </section>
 
@@ -90,7 +93,7 @@
 
          
 
-            <h2 class="font-Poppins font-bold text-4xl rounded-lg text-white bg-LightBlue p-5 max-w-[300px] mx-auto text-center " id="our-service">Our <span
+            <h2 class="font-Poppins font-bold text-4xl rounded-lg text-white bg-LightBlue p-5 max-w-[300px] mx-auto text-center mask-text " id="our-service">Our <span
                     class="text-Deepblue">Services</span></h2>
 
             <div class="flex flex-col lg:flex-row items-center justify-between  gap-10  mt-8">
