--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <div class="flex justify-between items-center px-[25px] lg:px-[50px] pt-[25px] relative ">
             <img class="h-[100px]  " src="images/cantranscam-logo.svg" alt="catranscam logo">
 
-            <ul class="z-20 flex flex-col justify-center items-center space-y-4 lg:space-y-0     lg:flex lg:flex-row lg:items-center lg:space-x-[30px] absolute top-0 left-0 w-full h-screen bg-LightBlue lg:bg-inherit lg:relative translate-y-[-1000px] lg:-translate-y-0 lg:w-auto lg:h-auto invisible  lg:visible   " id="nav-link">
+            <ul class="z-20 flex flex-col justify-center items-center space-y-4 lg:space-y-0     lg:flex lg:flex-row lg:items-center lg:space-x-[30px] absolute top-0 left-0 w-full h-screen bg-LightBlue lg:bg-inherit lg:relative translate-y-[-1000px] lg:-translate-y-0 lg:w-auto lg:h-auto invisible  lg:visible link  " id="nav-link">
                 <li class="font-Quantico  text-lg "><a class="hover:text-LightBlue lg:text-black  text-white text-5xl lg:text-lg text-left duration-500 links" href="#about-us">About Us</a></li>
                 <li class="font-Quantico  text-lg "><a class="hover:text-LightBlue lg:text-black  text-white text-5xl lg:text-lg text-left duration-500 links" href="#our-service">Our service</a></li>
                 <li class="font-Quantico  text-lg "><a class="hover:text-LightBlue lg:text-black  text-white text-5xl lg:text-lg text-left duration-500 links" href="#team">Team</a></li>
-                <li class="font-Quantico      bg-white lg:bg-LightBlue  rounded-lg p-1 hover:bg-blue-400 duration-500 "><a class="text-LightBlue lg:text-white lg:text-lg text-2xl" href="#contact">Contact Us</a></li>
-             <li  id="btn-lang" class="cursor-pointer flex flex-col items-center"><span class="iconify"  style="font-size: 32px;" data-icon="vs:language"></span>
+                <li class="font-Quantico links      bg-white lg:bg-LightBlue  rounded-lg p-1 hover:bg-blue-400 duration-500 "><a class="text-LightBlue lg:text-white lg:text-lg text-2xl" href="#contact">Contact Us</a></li>
+             <li  id="btn-lang" class="cursor-pointer links flex flex-col items-center"><span class="iconify"  style="font-size: 32px;" data-icon="vs:language"></span>
                 <div class="bg-white lg:bg-LightBlue w-max mt-1 rounded-sm hidden" id="display-lang">
                     <a  class="p-2 font-Quantico text-LightBlue text-lg  lg:text-white  " href="fr/catranscam-fr.html">Francais</a>
 
@@ -81,7 +81,7 @@
                     class="text-LightBlue font-Poppins font-bold text-2xl md:text-4xl lg:text-5xl about-title  ">
                     CATRANSCAM <br><span class="text-Deepblue about-title">YOUR IDEAL PARTNER</span></h1>
     
-                    <p class="body-text max-w-md">With more than 20 years of experience CATRANSCAM was created in 1991 with the vision to facilitated international trade. Today we have a fully trained task force with years of experience in the field. Over 20 years of experience is over 20 years of loyal and quality service</p>
+                    <p class="body-text max-w-md about-text">With more than 20 years of experience CATRANSCAM was created in 1991 with the vision to facilitated international trade. Today we have a fully trained task force with years of experience in the field. Over 20 years of experience is over 20 years of loyal and quality service</p>
                 </div>
                 <img class="md:h-[350px] h-auto  lg:rounded-full mt-[20px] lg:mt-0 image-mask  "  src="images/truck.png" alt="">
             </div>
@@ -98,18 +98,18 @@
 
             <div class="flex flex-col lg:flex-row items-center justify-between  gap-10  mt-8">
                <div class="grid grid-cols-1  md:grid-cols-2  items-center gap-5">
-                <div class="space-y-2">
+                <div class="space-y-2 services">
                     <img src="icons/transit.svg" alt="">
                     <h3 class="text-xl text-Deepblue font-bold">Transit</h3>
                     <p class="font-Quantico text-black leading-6 text-base md:max-w-xs lg:max-w-[420px] ">A team versed in diverse operations in international trade, negotiations of landing ETA, insurance etc. With diligence we take care of all sea, air, land operations upstream or downstream clearance.</p>
                 </div>
-                <div class="space-y-2">
+                <div class="space-y-2 services">
                     <img src="icons/approved.svg" alt="">
                     <h3 class="text-xl text-Deepblue font-bold">Approved customs commisioner</h3>
                     <p class="font-Quantico text-black leading-6 text-base md:max-w-xs lg:max-w-[420px] ">Privileged domain of declaration as well as choice of customs. Our competent declarant staff are indispensably friendly experienced. We treat your files in optimal conditions of safety, rigor, speed and professionalism..</p>
                 </div>
 
-                <div class="space-y-2">
+                <div class="space-y-2 services">
                     <img src="icons/transport.svg" alt="">
                     <h3 class="text-xl text-Deepblue font-bold">Transport</h3>
                     <p class="font-Quantico text-black leading-6 text-base md:max-w-xs lg:max-w-[420px] ">To support the growth of
@@ -119,7 +119,7 @@
                 </div>
 
 
-                <div class="space-y-2">
+                <div class="space-y-2 services">
                     <img src="icons/storage.svg" alt="">
                     <h3 class="text-xl text-Deepblue font-bold">Ungroupping Storage</h3>
                     <p class="font-Quantico text-black leading-6 text-base md:max-w-xs lg:max-w-[420px] ">Member of SEA, a network of
@@ -128,7 +128,7 @@
                         the best conditions </p>
                 </div>
 
-                <div class="space-y-2">
+                <div class="space-y-2 services">
                     <img src="icons/fret.svg" alt="">
                     <h3 class="text-xl text-Deepblue font-bold">Freight Reservation</h3>
                     <p class="font-Quantico text-black leading-6 text-base md:max-w-xs ">We are part of a network of unloaders
@@ -137,7 +137,7 @@
                         request in freight air or sea</p>
                 </div>
 
-                <div class="space-y-2">
+                <div class="space-y-2 services">
                     <img src="icons/transfert.svg" alt="">
                     <h3 class="text-xl text-Deepblue font-bold">Transfert</h3>
                     <p class="font-Quantico text-black leading-6 text-base md:max-w-xs ">Distance is no barrier . We convey your goods in all safety 
@@ -162,17 +162,22 @@
                             <div class="flex flex-col md:flex-row space-y-10 md:space-y-0 spac-x-5 items-center gap-5 ">
                                 <div class="mx-auto text-center space-y-1  ">
                                    <img class="mx-auto" src="icons/greatings.svg" alt="">
-                                   <h4 class="font-Poppins font-bold text-3xl text-LightBlue">10k</h4>
+                                   <h4 class="font-Poppins font-bold text-3xl text-LightBlue number">10k</h4>
                                    <p class="text-base text-black font-Quantico">customer served</p> 
                                 </div>
                                 <div class="mx-auto text-center space-y-1  ">
                                     <img class="mx-auto" src="icons/globe.svg" alt="">
-                                    <h4 class="font-Poppins font-bold text-3xl text-LightBlue">10,000km/h</h4>
+                                    <div class="flex items-center">
+
+                                    
+                                    <h4 class="font-Poppins font-bold text-3xl text-LightBlue numbers">10000 </h4>
+                                    <span class="font-Poppins font-bold text-3xl text-LightBlue">km/h</span>
+                                </div>
                                     <p class="text-base text-black font-Quantico">Delivery distance</p> 
                                  </div>
                                  <div class="mx-auto text-center space-y-1  ">
                                     <img class="mx-auto w-[47px] " src="icons/fret.svg" alt="">
-                                    <h4 class="font-Poppins font-bold text-3xl text-LightBlue">10k</h4>
+                                    <h4 class="font-Poppins font-bold text-3xl text-LightBlue number">10k</h4>
                                     <p class="text-base text-black font-Quantico">Door-to-door</p> 
                                  </div>
                             </div>
