--- a/fr/catranscam-fr.html
+++ b/fr/catranscam-fr.html
@@ -12,13 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Quantico:wght@400;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" type="text/css" href="/slick.css"/>
    <link rel="stylesheet" type="text/css" href="/slick-theme.css"/>
-    <title>CANTRANSCAM Agence De Fret</title>
+    <title>CATRANSCAM Agence De Fret</title>
 </head>
 
 <body>
     <nav>
         <div class="flex justify-between items-center px-[25px] lg:px-[50px] pt-[25px] relative ">
-            <img class="h-[100px]  " src="/images/cantranscam-logo.svg" alt="cantranscam logo">
+            <img class="h-[100px]  " src="/images/cantranscam-logo.svg" alt="catranscam logo">
 
             <ul class="z-20 flex flex-col justify-center items-center space-y-4 lg:space-y-0     lg:flex lg:flex-row lg:items-center lg:space-x-[30px] absolute top-0 left-0 w-full h-screen bg-LightBlue lg:bg-inherit lg:relative translate-y-[-1000px] lg:-translate-y-0 lg:w-auto lg:h-auto invisible  lg:visible   " id="nav-link">
                 <li class="font-Quantico  text-lg "><a class="hover:text-LightBlue lg:text-black  text-white text-5xl lg:text-lg text-left duration-500 links" href="#about-us">À propos de nous</a></li>
@@ -132,7 +132,7 @@
                 </div>
                </div>
 
-               <img src="/images/ship&cargo.jpg" alt="">
+               <img  src="/images/ship&cargo.jpg" alt="">
 
 
             </div>
