--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="font-Quantico  text-lg "><a class="hover:text-LightBlue lg:text-black  text-white text-5xl lg:text-lg text-left duration-500 links" href="#our-service">Our service</a></li>
                 <li class="font-Quantico  text-lg "><a class="hover:text-LightBlue lg:text-black  text-white text-5xl lg:text-lg text-left duration-500 links" href="#team">Team</a></li>
                 <li class="font-Quantico links      bg-white lg:bg-LightBlue  rounded-lg p-1 hover:bg-blue-400 duration-500 "><a class="text-LightBlue lg:text-white lg:text-lg text-2xl" href="#contact">Contact Us</a></li>
-             <li  id="btn-lang" class="cursor-pointer links flex flex-col items-center"><span class="iconify"  style="font-size: 32px;" data-icon="vs:language"></span>
+             <li  id="btn-lang" class="cursor-pointer  flex flex-col items-center"><span class="iconify"  style="font-size: 32px;" data-icon="vs:language"></span>
                 <div class="bg-white lg:bg-LightBlue w-max mt-1 rounded-sm hidden" id="display-lang">
                     <a  class="p-2 font-Quantico text-LightBlue text-lg  lg:text-white  " href="fr/catranscam-fr.html">Francais</a>
 
@@ -145,7 +145,7 @@
                 </div>
                </div>
 
-               <img src="images/ship&cargo.jpg" alt="">
+               <img class="services" src="images/ship&cargo.jpg" alt="">
 
 
             </div>
@@ -153,10 +153,10 @@
 
         <section class="relisation bg-world-map  bg-cover bg-center bg-fixed w-full h-full mt-[75px] overflow-hidden ">
             <div class=" flex flex-col md:flex-row justify-between text-center md:items-start w-full py-12 ">
-                <img class="hidden md:block md:w-[200px] lg:w-auto " src="images/Trailer.png" alt="">
+                <img class="hidden md:block md:w-[200px] lg:w-auto  vehiculex" src="images/Trailer.png" alt="">
                 <div class="space-y-3 px-[25px] md:px-0 mx-auto ">
                     <h3 class="font-Poppins text-3xl md:text-4xl font-bold text-center text-LightBlue ">What have
-                        <br><span class="text-Deepblue">we done up to date</span></h3>
+                        <br><span class="text-Deepblue rel-text">we done up to date</span></h3>
                         <p class="text-base font-Quantico max-w-[400px] text-center mx-auto ">Our 20 years of experinces CATRANSCAM delivered servives around the world and at clients
                             door-steps</p>
                             <div class="flex flex-col md:flex-row space-y-10 md:space-y-0 spac-x-5 items-center gap-5 ">
@@ -182,7 +182,7 @@
                                  </div>
                             </div>
                 </div>
-                <img class="hidden md:block md:w-[200px] lg:w-auto " src="images/van.png" alt="">
+                <img class="hidden md:block md:w-[200px] lg:w-auto vehicules " src="images/van.png" alt="">
 
           
             </div>
@@ -191,8 +191,8 @@
 
         <section class="customer mt-[75px]  ">
              <div class="space-y-1 grid place-items-center mx-[25px] md:mx-[50px] pb-5 ">
-                   <h3 class="text-3xl lg:text-4xl font-Poppins text-LightBlue font-bold text-center">They trust <span class="text-Deepblue">us</span> </h3>
-                   <p class="body-text text-center max-w-full md:max-w-[570px]  max-auto  ">CATRANSCAM MANAGES STRATEGIC FREIGHT PROCUREMENT FOR SOME OF THE WORLD'S LEADING COMPANIES.</p>
+                   <h3 class="text-3xl lg:text-4xl font-Poppins text-LightBlue font-bold text-center trust">They trust <span class="text-Deepblue">us</span> </h3>
+                   <p class="body-text text-center max-w-full md:max-w-[570px]  max-auto trust-text  ">CATRANSCAM MANAGES STRATEGIC FREIGHT PROCUREMENT FOR SOME OF THE WORLD'S LEADING COMPANIES.</p>
              </div>
              
 
@@ -467,7 +467,7 @@
 
 <footer class="mt-[75px] bg-LightBlue flex flex-col justify-center items-center py-5 ">
    
-    <p class="font-Quantico text-white ">CopyWrite &copy; 2022 <span>CATRANSCAM SARL</span></p>
+    <p class="font-Quantico text-white ">Copyright &copy; 2022 <span>CATRANSCAM SARL</span></p>
 </footer>
 
 
